# AnimeRL

./: README.md  my-info.json  pyproject.toml  setup.py
animRL/: __init__.py
animRL/cfg/base/: base_config.py
animRL/cfg/mimic/: cartwheel_config.py  mimic_config.py  walk_config.py
animRL/dataloader/: motion_loader.py
animRL/envs/: __init__.py
animRL/envs/base/: base_task.py
animRL/envs/mimic/: mimic_task.py
animRL/resources/datasets/bob3/: Cartwheel.txt  Walk.txt
animRL/resources/robots/bob_v3/: bob_v3.urdf
animRL/resources/tests/: test_cartwheel_policy.json  test_cartwheel_random.json  test_walk_policy.json  test_walk_random.json
animRL/results/: wandb_url.json
animRL/rewards/: rewards.py
animRL/runners/algorithms/: ppo.py
animRL/runners/modules/: normalizer.py  policy.py  value.py
animRL/runners/storage/: rollout_storage.py
animRL/scripts/: eval.py  plot_phase.py  test_reward.py  train.py
animRL/utils/: __init__.py  helpers.py  isaac_helpers.py  math.py  plots.py  task_registry.py  wandb_utils.py
